font changed, added geolocation plugin into the app

--- a/Baramati_ionic_4/src/app/home/home.page.html
+++ b/Baramati_ionic_4/src/app/home/home.page.html
@@ -4,11 +4,13 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Home
+      Current
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-   
+  <ion-card>
+    
+  </ion-card>
 </ion-content>
