--- a/Baramati_ionic_4/src/global.scss
+++ b/Baramati_ionic_4/src/global.scss
@@ -9,3 +9,26 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400');
+
+ion-content, ion-title, .item > .sc-ion-label-md-h, .item-native, ion-label, p, span, h1, h2, h3, h4, h5, h6, div{
+  font-family: 'Montserrat';
+}
+
+.picker-toolbar.sc-ion-picker-ios {
+  border-bottom: 0;
+}
+.picker-wrapper.sc-ion-picker-ios {
+  border-top: 0;
+}
+.picker-wrapper.sc-ion-picker-ios {
+  background: #2b2b2b;
+}
+.picker-above-heighlight.sc-ion-picker-ios, .picker-below-heighlight.sc-ion-picker-ios {
+  background: rgba(0,0,0,.5);
+  border: none;
+}
+.picker-opt{
+  color: white;
+}
