--- a/Baramati_ionic_4/src/theme/variables.scss
+++ b/Baramati_ionic_4/src/theme/variables.scss
@@ -3,6 +3,10 @@
 
 /** Ionic CSS Variables **/
 :root {
+
+  --ion-background-color: #fafafa;
+  --ion-toobar-color: red;
+
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
